--- a/package.json
+++ b/package.json
@@ -5,18 +5,24 @@
 	"author": "NickJ202",
 	"license": "ISC",
 	"scripts": {
-		"format": "npx prettier --write .",
+		"format": "eslint --fix . && npx prettier --write .",
+		"test": "ts-node src/tests",
 		"build": "tsc",
 		"build:publish": "npm run build && npm publish"
 	},
 	"dependencies": {
 		"arweave": "^1.11.6",
-		"warp-contracts": "^1.2.11"
+		"warp-contracts": "^1.2.56"
 	},
 	"devDependencies": {
 		"prettier": "^2.8.3",
 		"ts-node": "^10.9.1",
-		"typescript": "^4.9.5"
+		"typescript": "^4.9.5",
+		"eslint": "^8.35.0",
+		"eslint-plugin-import": "^2.27.5",
+		"eslint-plugin-simple-import-sort": "^10.0.0",
+		"@typescript-eslint/eslint-plugin": "^5.54.0",
+		"@typescript-eslint/parser": "^5.54.0"
 	},
 	"repository": {
 		"type": "git",
