--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,17 +8,10 @@
 		"strict": true,
 		"declaration": true,
 		"esModuleInterop": true,
-		"noUnusedLocals": true,
-		"noUnusedParameters": true,
+		"noUnusedLocals": false,
+		"noUnusedParameters": false,
 		"baseUrl": "."
 	},
-	"include": [
-		"src/**/*.ts",
-		"src/**/*.tsx",
-		"src/actions/deploy.mjs",
-		"src/actions/deploy.mjs",
-		"../arc-framework/src/assets/index.ts",
-		"../arc-framework/src/assets/index.ts"
-	],
+	"include": ["src/**/*.ts"],
 	"exclude": ["node_modules", "**/*.spec.ts"]
 }
