--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "arcframework",
-	"version": "1.1.16",
+	"version": "1.1.17",
 	"description": "Alex. Framework",
 	"author": "NickJ202",
 	"license": "ISC",
@@ -12,17 +12,17 @@
 	},
 	"dependencies": {
 		"arweave": "^1.11.6",
-		"warp-contracts": "^1.2.56"
+		"warp-contracts": "^1.3.0"
 	},
 	"devDependencies": {
-		"prettier": "^2.8.3",
-		"ts-node": "^10.9.1",
-		"typescript": "^4.9.5",
+		"@typescript-eslint/eslint-plugin": "^5.54.0",
+		"@typescript-eslint/parser": "^5.54.0",
 		"eslint": "^8.35.0",
 		"eslint-plugin-import": "^2.27.5",
 		"eslint-plugin-simple-import-sort": "^10.0.0",
-		"@typescript-eslint/eslint-plugin": "^5.54.0",
-		"@typescript-eslint/parser": "^5.54.0"
+		"prettier": "^2.8.3",
+		"ts-node": "^10.9.1",
+		"typescript": "^4.9.5"
 	},
 	"repository": {
 		"type": "git",
