--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "arcframework",
-	"version": "1.1.17",
+	"version": "1.1.18",
 	"description": "Alex. Framework",
 	"author": "NickJ202",
 	"license": "ISC",
@@ -12,7 +12,8 @@
 	},
 	"dependencies": {
 		"arweave": "^1.11.6",
-		"warp-contracts": "^1.3.0"
+		"warp-contracts": "^1.3.0",
+		"warp-contracts-plugin-deploy": "^1.0.1"
 	},
 	"devDependencies": {
 		"@typescript-eslint/eslint-plugin": "^5.54.0",
