--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
 		"target": "es2021",
 		"lib": ["dom", "dom.iterable", "esnext"],
 		"moduleResolution": "node",
+		"outDir": "dist",
 		"skipLibCheck": true,
 		"allowSyntheticDefaultImports": true,
 		"allowJs": true,
@@ -20,5 +21,5 @@
 		"strictNullChecks": false,
 		"resolveJsonModule": true
 	},
-	"include": ["src", "src/**/*.json", "src/clients/arweave/index.ts"]
+	"include": ["src"]
 }
