--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"build:publish": "npm run build && npm publish"
 	},
 	"dependencies": {
+		"@bundlr-network/client": "file:.yalc/@bundlr-network/client",
 		"arweave": "^1.11.6",
 		"warp-contracts": "^1.3.3",
 		"warp-contracts-plugin-deploy": "^1.0.1"
