--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "arcframework",
-	"version": "1.1.20",
+	"version": "1.1.21",
 	"description": "Alex. Framework",
 	"author": "NickJ202",
 	"license": "ISC",
@@ -11,7 +11,7 @@
 		"build:publish": "npm run build && npm publish"
 	},
 	"dependencies": {
-		"@bundlr-network/client": "file:.yalc/@bundlr-network/client",
+		"@bundlr-network/client": "^0.10.5",
 		"arweave": "^1.11.6",
 		"warp-contracts": "^1.3.3",
 		"warp-contracts-plugin-deploy": "^1.0.1"
