--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,8 +16,8 @@
 		"noImplicitReturns": true,
 		"noImplicitAny": false,
 		"noImplicitThis": false,
-		"noUnusedLocals": false,
-		"noUnusedParameters": false,
+		"noUnusedLocals": true,
+		"noUnusedParameters": true,
 		"strictNullChecks": false,
 		"resolveJsonModule": true
 	},
