--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "arcframework",
-	"version": "1.1.22",
+	"version": "1.1.26",
 	"description": "Alex. Framework",
 	"author": "NickJ202",
 	"license": "ISC",
@@ -13,8 +13,7 @@
 	"dependencies": {
 		"@bundlr-network/client": "^0.10.5",
 		"arweave": "^1.11.6",
-		"warp-contracts": "^1.3.3",
-		"warp-contracts-plugin-deploy": "^1.0.1"
+		"warp-contracts": "^1.3.3"
 	},
 	"devDependencies": {
 		"@typescript-eslint/eslint-plugin": "^5.54.0",
