--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "arcframework",
-	"version": "1.1.26",
+	"version": "1.1.27",
 	"description": "Alex. Framework",
 	"author": "NickJ202",
 	"license": "ISC",
@@ -11,9 +11,8 @@
 		"build:publish": "npm run build && npm publish"
 	},
 	"dependencies": {
-		"@bundlr-network/client": "^0.10.5",
-		"arweave": "^1.11.6",
-		"warp-contracts": "^1.3.3"
+		"arweave": "1.13.7",
+		"warp-contracts": "1.4.1"
 	},
 	"devDependencies": {
 		"@typescript-eslint/eslint-plugin": "^5.54.0",
