--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "arcframework",
-	"version": "1.1.30",
+	"version": "1.1.31",
 	"description": "Alex. Framework",
 	"author": "NickJ202",
 	"license": "ISC",
@@ -12,9 +12,10 @@
 	},
 	"dependencies": {
 		"arweave": "1.13.7",
-		"warp-contracts": "1.4.1"
+		"warp-contracts": "1.4.4"
 	},
 	"devDependencies": {
+		"@types/node": "^18.16.1",
 		"@typescript-eslint/eslint-plugin": "^5.54.0",
 		"@typescript-eslint/parser": "^5.54.0",
 		"eslint": "^8.35.0",
