--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "arcframework",
-	"version": "1.1.38",
+	"version": "1.1.39",
 	"description": "Alex. Framework",
 	"author": "NickJ202",
 	"license": "ISC",
@@ -11,8 +11,9 @@
 		"build:publish": "npm run build && npm publish"
 	},
 	"dependencies": {
+		"@bundlr-network/client": "0.11.1",
 		"arweave": "1.13.7",
-		"warp-contracts": "1.4.4"
+		"warp-contracts": "1.4.1"
 	},
 	"devDependencies": {
 		"@types/node": "^18.16.1",
