--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
 	"dependencies": {
 		"@bundlr-network/client": "0.11.1",
 		"arweave": "1.13.7",
-		"warp-contracts": "1.4.1"
+		"warp-contracts": "1.4.5",
+		"warp-contracts-plugin-deploy": "1.0.8"
 	},
 	"devDependencies": {
 		"@types/node": "^18.16.1",
