--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "arcframework",
-	"version": "1.1.43",
+	"version": "1.1.46",
 	"description": "Alex. Framework",
 	"author": "NickJ202",
 	"license": "ISC",
@@ -13,7 +13,8 @@
 	"dependencies": {
 		"@bundlr-network/client": "0.11.1",
 		"arweave": "1.13.7",
-		"warp-contracts": "1.4.6"
+		"warp-contracts": "1.4.6",
+		"warp-contracts-plugin-deploy": "1.0.8"
 	},
 	"devDependencies": {
 		"@types/node": "^18.16.1",
