--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"dependencies": {
 		"@bundlr-network/client": "0.11.1",
 		"arweave": "1.13.7",
+		"mime": "^3.0.0",
 		"warp-contracts": "1.4.6",
 		"warp-contracts-plugin-deploy": "1.0.8"
 	},
@@ -20,6 +21,8 @@
 		"@types/node": "^18.16.1",
 		"@typescript-eslint/eslint-plugin": "^5.54.0",
 		"@typescript-eslint/parser": "^5.54.0",
+		"@types/mime": "^3.0.1",
+		"@types/mime-types": "^2.1.1",
 		"eslint": "^8.35.0",
 		"eslint-plugin-import": "^2.27.5",
 		"eslint-plugin-simple-import-sort": "^10.0.0",
