--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"build:publish": "npm run build && npm publish"
 	},
 	"dependencies": {
-		"@bundlr-network/client": "0.11.1",
+		"@bundlr-network/client": "file:bundlr-network-client-0.11.2.tgz",
 		"arweave": "1.13.7",
 		"mime": "^3.0.0",
 		"warp-contracts": "1.4.6",
