--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
 		"test": "ts-node src/tests",
 		"build": "tsc",
 		"build:publish": "npm run build && npm publish",
-		"postinstall": "npm install ./bundlr-network-client-v0.11.2.tgz"
+		"postinstall": "npm install ./bundlr-network-client-v0.11.2.tgz",
+		"prepare": "husky install",
+		"check-packages": "node src/workers/check-packages.mjs"
 	},
 	"dependencies": {
 		"arweave": "1.13.7",
@@ -26,6 +28,7 @@
 		"eslint": "^8.35.0",
 		"eslint-plugin-import": "^2.27.5",
 		"eslint-plugin-simple-import-sort": "^10.0.0",
+		"husky": "^8.0.0",
 		"prettier": "^2.8.3",
 		"ts-node": "^10.9.1",
 		"typescript": "^4.9.5"
