--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "arcframework",
-	"version": "1.1.69",
+	"version": "1.1.70",
 	"description": "Alex. Framework",
 	"author": "NickJ202",
 	"license": "ISC",
@@ -20,16 +20,20 @@
 		"warp-contracts-plugin-deploy": "1.0.8"
 	},
 	"devDependencies": {
+		"@types/jest": "^29.5.1",
 		"@types/mime": "^3.0.1",
 		"@types/mime-types": "^2.1.1",
 		"@types/node": "^18.16.1",
 		"@typescript-eslint/eslint-plugin": "^5.54.0",
 		"@typescript-eslint/parser": "^5.54.0",
+		"babel-jest": "^29.5.0",
 		"eslint": "^8.35.0",
 		"eslint-plugin-import": "^2.27.5",
 		"eslint-plugin-simple-import-sort": "^10.0.0",
 		"husky": "^8.0.0",
+		"jest": "^29.5.0",
 		"prettier": "^2.8.3",
+		"ts-jest": "^29.1.0",
 		"ts-node": "^10.9.1",
 		"typescript": "^4.9.5"
 	},
