--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"license": "ISC",
 	"scripts": {
 		"format": "eslint --fix . && npx prettier --write .",
-		"test": "uvu -r ts-node/register tests",
+		"test": "ts-node tests/framework.test.ts",
 		"build": "tsc",
 		"build:publish": "npm run build && npm publish",
 		"postinstall": "npm install ./bundlr-network-client-v0.11.2.tgz",
