--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "arcframework",
-	"version": "1.1.96",
+	"version": "1.2.01",
 	"description": "Alex. Framework",
 	"author": "NickJ202",
 	"license": "ISC",
@@ -16,7 +16,7 @@
 	"dependencies": {
 		"arweave": "1.13.7",
 		"mime": "^3.0.0",
-		"warp-contracts": "1.4.6",
+		"warp-contracts": "^1.4.15-rc.6",
 		"warp-contracts-plugin-deploy": "1.0.8"
 	},
 	"devDependencies": {
