--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "arcframework",
-	"version": "1.2.27",
+	"version": "1.2.34",
 	"description": "Alex. Framework",
 	"author": "NickJ202",
 	"license": "ISC",
@@ -9,7 +9,6 @@
 		"test": "ts-node tests/framework.test.ts",
 		"build": "tsc",
 		"build:publish": "npm run build && npm publish",
-		"postinstall": "npm install ./bundlr-network-client-v0.11.2.tgz",
 		"prepare": "husky install",
 		"check-packages": "node src/workers/check-packages.mjs"
 	},
@@ -47,7 +46,6 @@
 	"files": [
 		"dist",
 		"README.md",
-		"package.json",
-		"bundlr-network-client-v0.11.2.tgz"
+		"package.json"
 	]
 }
